--- a/application-dev.yml
+++ b/application-dev.yml
@@ -4,3 +4,11 @@ server:
 spring:
   application:
     name: config-single-client
+  data:
+    mongodb:
+      host: 10.220.136.220
+      port: 7195
+      username: mongo
+      password: 71985c446543f96f
+      database: thor_test
+      authentication-database: admin
